<resources>

    <string name="app_name">Battle Tap</string>
    <string name="action_settings">Settings</string>

    <string name="main_login_button">Login</string>
    <string name="main_register_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmation">Confirm Password</string>

    <string name="button_counter">Tap</string>

    <string name="battle_notification">Begin Battle?</string>
    <string name="battle_notification_yes">Yes</string>
    <string name="battle_notification_no">No</string>
</resources>