<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screen_title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"/>

    <View
        android:id="@+id/divider"
        android:background="#aaa"
        android:layout_width="1dp"
        android:layout_height="160dp"
        android:layout_below="@id/screen_title"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/divider"
        android:layout_alignTop="@id/divider">

        <EditText
            android:id="@+id/login_username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/main_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/divider"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/divider">

        <EditText
            android:id="@+id/register_username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <EditText
            android:id="@+id/register_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/register_confirm_password"
            android:hint="@string/confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/register_button"
            android:text="@string/main_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>